--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 		<div class = "container">
 			<div class="about">
 				<div class="photo-me">
-					<img src="assets/img/me.JPG" class="photo-me" width="450">
+					<img src="assets/img/me.jpg" class="photo-me" width="450">
 
 					<div class="links">
 						<a href="https://www.linkedin.com/in/victoria-wu-b6120096/" class="in" target="_blank">
